04_applications/manifests/firefly/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: firefly
  namespace: firefly
spec:
  ingressClassName: traefik
  rules:
    - host: finance.local.nigelvanhattum.nl
      http:
        paths:
          - backend:
              service:
                name: firefly-firefly-iii
                port:
                  name: http
            path: /
            pathType: Prefix
